--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,43 @@
+.app {
+  max-width: 768px;
+  margin: 100px auto 0;
+}
+
+.counter-list {
+  margin-bottom: 30px;
+  padding: 15px;
+  background-color: #f4f4f4;
+}
+.counter-list button {
+  cursor: pointer;
+}
+.counter-list .other {
+  padding: 5px 7px;
+  background-color: #dcdcdc;
+}
+.counter-list .other p {
+  margin: 0 0 5px;
+}
+.counter {
+  margin: 15px 0;
+}
+.counter button {
+  margin: 0 5px;
+}
+.counter button:nth-of-type(1) {
+  margin-left: 0;
+}
+.counter span {
+  position: relative;
+  top: 2px;
+  margin: 0 5px;
+}
+
+
+
+
+
+/*
 .App {
   text-align: center;
 }
@@ -30,3 +70,4 @@
     transform: rotate(360deg);
   }
 }
+*/
